--- a/public/prislistacss.css
+++ b/public/prislistacss.css
@@ -97,8 +97,9 @@ body{
 
 .closed{
 	text-align: center;
+	margin-top: 700px;
 	color: white;
-	font-size: 50px;
+	font-size: 64px;
 }
 
 .hidden{
